# NeMO

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: nemo_demo.py  run_decoder_on_camera_feed.py  run_decoder_on_image.py  run_decoder_on_video.py  run_detection_on_video.py  run_encoder.py  run_encoder_on_camera_feed.py  run_interactive_surface_reconstruction.py  run_multi_decoder_on_camera_feed.py  run_multi_nemo_pnp_on_camera_feed.py  run_pnp_on_camera_feed.py  run_surface_reconstruction.py
src/nemolib/: __init__.py  _version.py  model.py  utils.py  visualization.py
src/nemolib/modules/: backbone.py  encoder.py  lifting.py  mlp.py  neural_field.py  positional_encoding.py
src/nemolib/modules/dpt/: blocks.py  models.py
src/nemolib/modules/heads/: __init__.py  dpt_block.py  dpt_head.py  linear_head.py  postprocess.py
